Fix favicon on subpages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,6 @@
   </script>
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
-  <!-- Favicon head tag -->
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <!-- Favicon head tag, see https://stackoverflow.com/questions/35037482/favicon-with-github-pages -->
+  <link rel="icon" type="image/x-icon" href="{{ "/assets/favicon.ico"  | absolute_url }}">>
 </head>
