--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,5 +21,5 @@
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
   <!-- Favicon head tag, see https://stackoverflow.com/questions/35037482/favicon-with-github-pages -->
-  <link rel="icon" type="image/x-icon" href="{{ "/assets/favicon.ico"  | absolute_url }}">>
+  <link rel="icon" type="image/x-icon" href="{{ "/assets/favicon.ico"  | absolute_url }}">
 </head>
